zellij-server/src/tab/unit/snapshots/zellij_server__tab__layout_applier_tests__override_layout_basic_with_both_tiled_and_floating.snap
---
source: zellij-server/src/tab/./unit/layout_applier_tests.rs
expression: "take_pane_state_snapshot(&tiled_panes, &floating_panes, &focus_pane_id,\n&viewport, &display_area,)"
---
VIEWPORT: x=0, y=0, cols=120, rows=40
DISPLAY: cols=120, rows=40
FOCUS: None

TILED PANES (2)
  Terminal(1):
    geom: x=0, y=20, cols=120, rows=20
    logical_position: 1
    run: Command(htop)
    selectable: true
    title: htop
    borderless: false

  Terminal(4):
    geom: x=0, y=0, cols=120, rows=20
    logical_position: 0
    run: Command(top)
    selectable: true
    title: top
    borderless: false

FLOATING PANES (1)
  Terminal(5):
    geom: x=20, y=15, cols=50, rows=25
    logical_position: 0
    run: Command(watch) args=["df", "-h"]
    pinned: false
    selectable: true
    title: watch df -h
    borderless: false
