zellij-server/src/tab/unit/snapshots/zellij_server__tab__layout_applier_tests__override_tiled_all_panes_closed_no_matches.snap
---
source: zellij-server/src/tab/./unit/layout_applier_tests.rs
expression: "take_pane_state_snapshot(&tiled_panes, &floating_panes, &focus_pane_id,\n&viewport, &display_area,)"
---
VIEWPORT: x=0, y=0, cols=120, rows=40
DISPLAY: cols=120, rows=40
FOCUS: None

TILED PANES (3)
  Terminal(4):
    geom: x=0, y=0, cols=120, rows=13
    logical_position: 0
    run: Command(cargo) args=["watch"]
    selectable: true
    title: cargo watch
    borderless: false

  Terminal(5):
    geom: x=0, y=13, cols=120, rows=13
    logical_position: 1
    run: Command(npm) args=["start"]
    selectable: true
    title: npm start
    borderless: false

  Terminal(6):
    geom: x=0, y=26, cols=120, rows=14
    logical_position: 2
    run: Command(python) args=["-m", "http.server"]
    selectable: true
    title: python -m http.server
    borderless: false
